[package]
name = "sindit-senml"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of the SenML RFC8428 proposed standard"
license = "Apache-2.0"
keywords = ["iot", "senml", "rfc8428", "json", "sensor"]
documentation = "https://docs.rs/sindit-senml"
authors = ["Antoine Pultier <antoine.pultier@sintef.no>"]
repository = "https://github.com/SINTEF/sindit-senml/"
include = [
  "README.md",
  "src/*.rs",
  "Cargo.toml",
  "Cargo.lock",
  "LICENSE",
  "tests/*.rs",
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.5"
once_cell = "1.18"
thiserror = "1.0"
base64 = "0.21"
struson = { version = "0.3", features = ["serde"], optional = true }

[dev-dependencies]
lazy_static = "1.4"

[features]
# Half baked for now
stream = []
